# clippy

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/util/: config.rs  logging.rs  mod.rs  processing.rs
