[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4.14"
simple_logger = "5.0.0"
regex = "1.5.4"
indicatif = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"